Attempted to fix some terminal warnings; fixed footer alignment

--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -73,6 +73,10 @@
   width: 75px;
 }
 
+.SocialButtons {
+  text-align: center;
+}
+
 .fb-butt {
   background-size: 95% 95%;
   background-image: url("../resource/footer/facebook.png");
